<resources>
    <string name="app_name">TAG Configuración</string>

    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_iniciar_sesion">Iniciar Sesion</string>
    <string name="error_field_required">Éste campo es requerido</string>
    <string name="title_conftag_list">TAG Configucación</string>
    <string name="error_login">Hubo un error al iniciar sesión, por favor intente nuevamente</string>
    <string name="error_internet">Por favor habilite su conexión a Internet para poder iniciar sesión</string>
    <string name="URL">http://sca.grupohi.mx/android20151106.php</string>
    <string name="general_exception">Por favor verifique su conexión a internet e intentelo nuevamente</string>
    <string name="title_login_activity">Iniciar Sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_conexion_tag">Error de conexion</string>
    <string name="button_write">PULSE AQUÍ PARA ESCRIBIR LOS DATOS EN EL TAG</string>
    <string name="escribe">Escribe un mensaje</string>
    <string name="error_camion_no_selected">Por favor seleccione un camión</string>
    <string name="error_tag_configurado">El TAG que intentas configurar ya ha sido configurado. Al camión: </string>
    <string name="error_tag_inexistente">El TAG que intentas configurar no está autorizado para éste proyecto o se ha remplazado.</string>
    <string name="error_tag_comunicacion">¡Error! No se puede establecer la comunicación con el TAG, por favor mantenga el TAG cerca del dispositivo</string>
    <string name="error_tag_comunicacion_KEY">¡Error! No se puede establecer la comunicación con el TAG, para el cambio de Llave por favor mantenga el TAG cerca del dispositivo</string>
    <string name="error_tag_capacidad_almacenamiento">¡Error! La información excede la capacidad de almacenamiento</string>
    <string name="error_update_tag">¡Error! Hubo un problema al registrar los cambios en la base de datos</string>
    <string name="text_warning_nfc_is_off">¡NFC Está apagado!</string>
    <string name="text_turn_on_nfc">La aplicación no funciona si el adaptador NFC está apagado. Por favor encienda el adaptador NFC en la configuración del dispositivo.</string>
    <string name="text_update_settings">Encender Ahora</string>
    <string name="tag_configurado">TAG configurado correctamente</string>
    <string name="error_camion_configurado">Camión ha sido configurado. Favor de sincronizar. </string>
    <string name="tag_remplazo">Se Reemplazo el TAG correctamente</string>
    <string name="mnetodo_sync">capturaConfiguracion</string>
    <string name="error_no_sync">¡Error! No se pudo realizar la soncronización</string>
    <string name="error_no_nfc">Su dispositivo no posee lector NFC. No se puede ejecutar esta aplicación.</string>
    <string name="key">773A7DB80405FF078069773A7DB80405</string>
    <string name="keyUID">773A7DB80405FF05A069773A7DB80405</string>
    <string name="def">FFFFFFFFFFFFFF078069FFFFFFFFFFFF</string>
    <string name="password">773A7DB80405</string>
    <string name="formatear">Se ha formateado con llaves privadas GHI </string>

    <string name="action_settings">Settings</string>

    <string name="error_uss">Error usuario NO coincide con la sesión.</string>
    <string name="error_anter">Error contraseña NO coincide con la sesión.</string>
    <string name="action_chance">Cambio de Contraseña</string>
    <string name="error_pass">Las contraseñas no coinciden. Intente de nuevo.</string>
    <string name="prompt_passAnterior">Escriba la Contraseña Actual.</string>
    <string name="error_field_requiredpass">La contraseña debe ser mayor a 8 digitos.</string>
    <string name="prompt_user">Nombre de Usuario</string>
    <string name="prompt_pass">Contraseña Nueva.</string>
    <string name="prompt_passwordConfirma">Confirmar Contraseña Nueva.</string>
    <string name="cambio">Cambiar Contraseña</string>
    <string name="err_permisos">Debe aceptar los permisos de la aplicación.</string>

    <!--Titulos-->
    <string name="title_group_registro">Configuración de TAG para Camión</string>
    <string name="title_activity_main">Asignar TAG</string>
    <string name="title_activity_reemplazar">Reemplazar TAG</string>
    <string name="title_activity_main_menu">Asignar</string>
    <string name="title_activity_reemplazar_menu">Reemplazar</string>
    <string name="title_activity_descarga">Descargar Catálogos</string>
    <string name="title_activity_sync">Enviar Configuraciones</string>
    <string name="title_group_sesion">Sesión Actual</string>
    <string name="title_activity_cambio_clave">Cambiar Clave de Acceso</string>
    <string name="title_activity_cerrar_sesion">Cerrar Sesión</string>
    <string name="error_camion_sobrepasa_longitud">Reporte al encargado de Sistemas, La longitud del camion sobrepasa lo permitido.</string>

</resources>
